--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "framer-motion": "^11.3.21",
+    "lucide-react": "^0.436.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0"
